--- a/pom.xml
+++ b/pom.xml
@@ -93,13 +93,7 @@
             <version>5.0.5</version>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>org.eclipse.persistence</groupId>-->
-        <!--<artifactId>javax.persistence</artifactId>-->
-        <!--<version>2.1.1</version>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-
+        <!-- TEST -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
