adding postgresql support

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
 
         <!-- TEST -->
         <dependency>
