--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
         <version.weld>2.2.9.Final</version.weld>
         <version.cdi>1.2</version.cdi>
         <version.findbugs.plugin>3.0.3</version.findbugs.plugin>
+        <version.maven-surefire-plugin>2.19.1</version.maven-surefire-plugin>
+        <version.maven-failsafe-plugin>2.19.1</version.maven-failsafe-plugin>
+        <version.tomcat-embed>8.5.4</version.tomcat-embed>
+        <version.shrinkwrap-resolver-impl-maven>2.2.2</version.shrinkwrap-resolver-impl-maven>
+        <version.arquillian-tomcat-embedded-8>1.0.0.CR7</version.arquillian-tomcat-embedded-8>
+        <version.arquillian-junit-container>1.1.11.Final</version.arquillian-junit-container>
     </properties>
 
     <dependencies>
@@ -122,48 +128,36 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- ARQUILLIAN TEST -->
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
-            <version>1.1.11.Final</version>
+            <version>${version.arquillian-junit-container}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
             <artifactId>arquillian-tomcat-embedded-8</artifactId>
-            <version>1.0.0.CR7</version>
+            <version>${version.arquillian-tomcat-embedded-8}</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- org.apache.tomcat -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>8.5.4</version>
+            <version>${version.tomcat-embed}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-            <version>8.5.4</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-logging-juli</artifactId>
-            <version>8.5.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jdt.core.compiler</groupId>
-            <artifactId>ecj</artifactId>
-            <version>3.7</version>
+            <version>${version.tomcat-embed}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-            <version>2.2.2</version>
+            <version>${version.shrinkwrap-resolver-impl-maven}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -222,7 +216,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>${version.maven-surefire-plugin}</version>
                 <configuration>
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
@@ -235,7 +229,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>${version.maven-failsafe-plugin}</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <includes>
