--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- ARQUILLIAN TEST -->
         <dependency>
@@ -134,6 +140,10 @@
             <artifactId>arquillian-junit-container</artifactId>
             <version>${version.arquillian-junit-container}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion><groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-core</artifactId></exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
