--- a/pom.xml
+++ b/pom.xml
@@ -140,10 +140,6 @@
             <artifactId>arquillian-junit-container</artifactId>
             <version>${version.arquillian-junit-container}</version>
             <scope>test</scope>
-            <exclusions>
-                <exclusion><groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-core</artifactId></exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
@@ -252,6 +248,12 @@
                         <id>integration-test</id>
                         <goals>
                             <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
