--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <version.shrinkwrap-resolver-impl-maven>2.2.2</version.shrinkwrap-resolver-impl-maven>
         <version.arquillian-tomcat-embedded-8>1.0.0.CR7</version.arquillian-tomcat-embedded-8>
         <version.arquillian-junit-container>1.1.11.Final</version.arquillian-junit-container>
+        <version.infinispan>8.2.4.Final</version.infinispan>
     </properties>
 
     <dependencies>
@@ -108,6 +109,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- CACHING -->
+        <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-core</artifactId>
+            <version>8.2.4.Final</version>
+        </dependency>
         <!-- TEST -->
         <dependency>
             <groupId>junit</groupId>
