--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,15 @@
 image: maven:3-jdk-8
 
 build:
-  script: "mvn clean verify -B"
+  stage: build
+  script: "mvn clean package -B -DskipTests -DskipITs -Dfindbugs.skip=true -T1.5C"
+
+
+tests:
+  stage: test
+  script: "mvn clean verify -B -T1.5C -DskiptITs"
+
+
+integration-tests:
+  stage: test
+  script: "mvn clean verify -B -T1.5C -DskipTests -Dfindbugs.skip=true"
