--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 image: maven:3-jdk-8
 
+cache:
+  paths:
+    - ~/m2/repository
+
+
 build:
   stage: build
   script: "mvn clean package -B -DskipTests -DskipITs -Dfindbugs.skip=true -T1.5C"
